package servicechaser.core.service;
import "src/main/resources/protobuf/core-entities.proto";

option java_package = "com.porecode.rpc.protobuf";
//option java_outer_classname = "ParameterValueService";
option java_generic_services = true;

message ParameterValueResponse {
  repeated servicechaser.core.entity.ParameterValue parameter_values = 1;
}

message ParameterValueRequest {

}

service ParameterValueService {
  rpc ListAll(ParameterValueRequest) returns(ParameterValueResponse);
}

